PROD-9-26-19/force-app/main/default/objects/Account_Summary__c/fields/Account_Summary__c.field-meta.xml
<CustomField>
    <fullName>Account_Summary__c</fullName>
    <label>Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>