PROD-9-26-19/force-app/main/default/objects/Account_Summary__c/fields/IDIG_Region__c.field-meta.xml
<CustomField>
    <fullName>IDIG_Region__c</fullName>
    <formula>Text(Property__r.IDIG_Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IDIG Region</label>
    <type>Text</type>
</CustomField>