PROD-9-26-19/force-app/main/default/objects/Account_Summary__c/fields/Summary_Status__c.field-meta.xml
<CustomField>
    <fullName>Summary_Status__c</fullName>
    <formula>IMAGE( 
  CASE(Status__c, 
    &quot;Green&quot;, &quot;/img/samples/flag_green.gif&quot;,
    &quot;Amber&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
    &quot;Red&quot;, &quot;/img/samples/flag_red.gif&quot;, 
    &quot;/s.gif&quot;
  ), 
  &quot;/img/samples/flag_green.gif&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>