PROD-9-26-19/force-app/main/default/objects/Account_Summary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Property__c</columns>
    <columns>Account_Summary__c</columns>
    <columns>Summary_Status__c</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>