PROD-9-26-19/force-app/main/default/objects/Account_Summary__c/listViews/Nor_Key_Accounts.listView-meta.xml
<ListView>
    <fullName>Nor_Key_Accounts</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Property__c</columns>
    <columns>Account_Summary__c</columns>
    <columns>Summary_Status__c</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Key_Account__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Not Key Accounts</label>
</ListView>